[gd_scene load_steps=2 format=2]

[ext_resource path="res://Godot Assets/Code/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.5
margin_top = -34.0
margin_right = 85.5
margin_bottom = 34.0

[node name="ReturnToGame" type="Button" parent="VBoxContainer"]
margin_right = 171.0
margin_bottom = 20.0
text = "Return"

[node name="GameOptions" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 171.0
margin_bottom = 44.0
text = "Options"

[node name="ReturnToMenu" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 171.0
margin_bottom = 68.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/ReturnToGame" to="." method="_on_ReturnToGame_pressed"]
[connection signal="pressed" from="VBoxContainer/GameOptions" to="." method="_on_GameOptions_pressed"]
[connection signal="pressed" from="VBoxContainer/ReturnToMenu" to="." method="_on_ReturnToMenu_pressed"]
